--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -8,5 +8,5 @@ repositories {
 dependencies {
     implementation group: 'org.testng', name: 'testng', version: '7.7.1'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.12.1'
-
+    implementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
 }
