--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -9,4 +9,9 @@ dependencies {
     implementation group: 'org.testng', name: 'testng', version: '7.7.1'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.12.1'
     implementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
+    implementation group: 'com.beust', name: 'jcommander', version: '1.48'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.6.1'
+    implementation group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.8'
+
+
 }
