--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -12,6 +12,22 @@ dependencies {
     implementation group: 'com.beust', name: 'jcommander', version: '1.48'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.6.1'
     implementation group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.8'
+}
 
+task testGroups(type: Test) {
+    useTestNG {
+        suites('src/test/resources/testng-groups.xml')
+    }
+}
 
+task testContacts(type: Test) {
+    useTestNG {
+        suites('src/test/resources/testng-contacts.xml')
+    }
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+    if (project.hasProperty('target')) {
+        systemProperty 'target', "${target}"
+    }
 }
